--- a/gb/19/10/4/n11569047.md
+++ b/gb/19/10/4/n11569047.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zkouno3802/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zkouno3802/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zkouno3802/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zkouno3802/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国从1840年沉船里发现大量金币</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/84e68f107a6b5f9782488f4edfceb852-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2019年10月05日讯】（大纪元记者高杉编译报导）据一个经营<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%89%93%E6%8D%9E.md#1">打捞</a><ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>的潜水团队透露，他们在一艘于1840年在美国南卡罗来纳州附近海域与另一艘轮船相撞后沉没的蒸汽船里发现了大量珍贵的<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E9%87%91%E5%B8%81.md#1">金币</a>。</p>
-<p>据福克斯新闻网（Foxnews）报导，一个名为“蓝水商业冒险国际”（Blue Water Ventures International）的公司和名为“坚韧勘探团队”（Endurance Exploration Group）对外发表声明，宣布他们的潜水队和救援船在9月下旬找到了这艘<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>的地点，而且在沉船中发现了“<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E9%87%91%E5%B8%81.md#1">金币</a>、大理石、餐具和用于船体建造的黄铜构件等等首批物品。”</p>
+	<p>【大纪元2019年10月05日讯】（大纪元记者高杉编译报导）据一个经营<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%89%93%E6%8D%9E.md#1">打捞</a><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>的潜水团队透露，他们在一艘于1840年在美国南卡罗来纳州附近海域与另一艘轮船相撞后沉没的蒸汽船里发现了大量珍贵的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E5%B8%81.md#1">金币</a>。</p>
+<p>据福克斯新闻网（Foxnews）报导，一个名为“蓝水商业冒险国际”（Blue Water Ventures International）的公司和名为“坚韧勘探团队”（Endurance Exploration Group）对外发表声明，宣布他们的潜水队和救援船在9月下旬找到了这艘<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%89%E8%88%B9.md#1">沉船</a>的地点，而且在沉船中发现了“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%87%91%E5%B8%81.md#1">金币</a>、大理石、餐具和用于船体建造的黄铜构件等等首批物品。”</p>
 <p>据透露，这艘19世纪的神秘沉船是在墨西哥湾被意外发现的。1840年7月25日，这艘“北卡罗来纳号” 蒸气轮船与其姊妹舰“达德利州长号”发生碰撞后沉没。</p>
-<p>参与<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%89%93%E6%8D%9E.md#1">打捞</a>项目的公司对此透露说：当时那次相撞没有造成任何生命损失，“北卡罗来纳号”船上的乘客都被安全地转移到“达德利州长号”船上。“然而，乘客的行李和船上的货物都在沉没中丢失。”“据估计，以今天的价值计算，‘北卡罗来纳号’船当时损失的物品价值数百万美元。”</p>
+<p>参与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%89%93%E6%8D%9E.md#1">打捞</a>项目的公司对此透露说：当时那次相撞没有造成任何生命损失，“北卡罗来纳号”船上的乘客都被安全地转移到“达德利州长号”船上。“然而，乘客的行李和船上的货物都在沉没中丢失。”“据估计，以今天的价值计算，‘北卡罗来纳号’船当时损失的物品价值数百万美元。”</p>
 <p>该公司在声明中还补充说：“据信，在‘北卡罗来纳号’于1840年沉没之前，一些1838年在达洛尼加新成立的美国铸币局（US Mint in Dahlonega）铸造的金币就已经在流通了，如果被发现，这些金币在今天的收藏市场上将极具价值。”</p>
 <p>《夏洛特观察报》（Charlotte Observer）对此报导说，打捞工作正在距离南卡罗来纳州海岸20英里的海域进行。</p>
 <p>“蓝水商业冒险国际”公司的总裁韦伯（Keith Webb）在声明中说：“2019年潜水季的上半季，我们在几个沉船遗址工作了一段时间，有些很有名，有些不知名，但我们很高兴能对‘北卡罗来纳号’进行打捞工作，特别是当你在沉船地点的第一天就能看到金币！”。</p>
@@ -19,41 +19,40 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/7/27/n10594792.md#1">神秘的沉船遗迹 成为海洋生物的新乐园</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/8/23/n10661383.md#1">中国非法打捞英军二战沉船 英国调查</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/8/26/n10668156.md#1">外星沉船？百慕大三角海底惊现不明物体</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/7/27/n10594792.md#1">神秘的沉船遗迹 成为海洋生物的新乐园</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/23/n10661383.md#1">中国非法打捞英军二战沉船 英国调查</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/26/n10668156.md#1">外星沉船？百慕大三角海底惊现不明物体</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/21/n10992365.md#1" target="_blank">殷毅：我在右派专列上</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/6/28/n12217817.md#1">袭人，即是人生本身</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/8/30/n12367994.md#1">古今六大预言 2020年前后的大交集(上)</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/19/n12416366.md#1">【大选观察】川普对付中共敢说敢做</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416543.md#1">【拍案惊奇】中美外交降级？崔天凯自曝睡不着</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12417157.md#1">【珍言真语】谢田：捆绑蚂蚁金服 中共在港捞钱</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/19/n12416159.md#1">余茂春回应中共“族谱”除名：闹剧可休矣</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/18/n12414308.md#1">【新闻看点】美吁关系对等 崔天凯威胁踩红线</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/19/n12415378.md#1">大陆女网红直播时遭前夫淋汽油烧身命危</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/18/n12414073.md#1">高以翔黄鸿升相继猝逝 医生揭青壮年六大警讯</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/18/n12414628.md#1">被郭富城反复说丑 杨千嬅一度黑脸场面尴尬</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/18/n12414339.md#1">杨丞琳被昵称小鬼 黄鸿升《学妹》编号藏密码</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12417573.md#1">共军模拟炸关岛基地 视频被揭盗用三部美国片</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416699.md#1">子瑜中秋假期回不了台湾 与Elkie相约吃月饼</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/18/n12413918.md#1">黄鸿升猝逝死因初判心血管病 独居者如何自救？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416956.md#1">印度边境秘密部队多由藏人组成 原因为何？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/4/n12381760.md#1">【线上活动】远离骨折 骨质疏松！保骨大作战</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/18/n12412622.md#1">4岁女童险遭掳 柔道教练“剪刀脚”制服绑匪</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416698.md#1">中国5名“外包杀手” 获搞笑诺贝尔奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zkouno3802/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zkouno3802/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/4/n11569047.htm">美国从1840年沉船里发现大量金币</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/4/n11569047.htm">美国从1840年沉船里发现大量金币</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zkouno3802/djy/blob/master/gb/19/10/4/n11569047.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zkouno3802/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zkouno3802/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/10/4/n11569047.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
